<resources>
    <string name="app_name">Ancient_handcraft</string>


    <string name="no_internet_connection_check">No network , Please check your internet connection</string>
    <string name="no_content_text">No content available</string>

    <string name="email_id_hint">Email ID/ Mobile Number</string>
    <string name="password_hint">Password</string>
    <string name="log_in">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="not_member_yet_text">Not member yet?</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign Up</string>
    <string name="login_with_facebook_text">Login with Facebook</string>


    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="mobileno_hint">Mobile Number</string>
    <string name="india_code">+91</string>
    <string name="only_email_id_text">Email ID</string>
    <string name="password_text">Password</string>
    <string name="radio_male_text">Male</string>
    <string name="radio_female_text">Female</string>
    <string name="already_member_text">Already a member?</string>


    <string name="firstname_blank_error">Please enter First Name</string>
    <string name="lastname_blank_error">Please enter Last Name</string>
    <string name="mobileno_blank_error">Please enter Mobile Number</string>
    <string name="mobileno_valid_error">Please enter valid mobileno, mobile no must have 10 digits</string>
    <string name="email_blank_error">Please enter Email Id</string>
    <string name="email_valid_error">Please enter valid Email Id</string>
    <string name="password_blank_error">Please enter password</string>
    <string name="password_valid_error">Please enter valid password</string>

    <string name="forgot_password_heading_text">Forgot Password</string>
    <string name="submit_text">Submit</string>
    <string name="cancel_text">Cancel</string>
    <string name="confirm_text">Confirm</string>
    <string name="blank"></string>
    <string name="dashboard_text">Dashboard</string>
    <string name="alert_exit">Please press BACK again to exit</string>
    <string name="hot_right_now">Hot Right Now</string>
    <string name="featured_brands">Featured Brands</string>
    <string name="latest_product">latest Products</string>

    <string name="productlist_text">Product List</string>
    <string name="productdetails_text">Product Details</string>
    <string name="loading_text">Loading</string>


    <string name="search_bar_hint">SEARCH FOR PRODUCTS, BRANDS AND MORE</string>
    <string name="category_text">Categories</string>
    <string name="offers_text">Offers</string>
    <string name="craft_text">Craft</string>
    <string name="success">success</string>
    <string name="something_went_wrong">Something went wrong</string>

    <string name="verify_otp_header">Verify OTP</string>
    <string name="logout">Logout</string>
    <string name="verifyotp_hint">Enter OTP</string>
    <string name="verifyotp_blank_error">Please enter OTP</string>
    <string name="registration_success_text">Registration Successful</string>
    <string name="invalid_email_mobile_error">Invalid Email or Mobile No</string>

    <string name="logout_success_text">Logout Successfully</string>
    <string name="login_success_text">Login Successfully</string>
    <string name="otp_validation_error">Invalid OTP, Please check once</string>

    <string name="logout_confirmation_text">Are you sure want to Logout?</string>





</resources>
