<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.ancient.ancient_handcraft.app.widget.AppCustomTextView
                android:id="@+id/header_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_30sdp"
                android:text="@string/forgot_password_heading_text"
                android:textColor="@color/wallet_btn_color"
                android:textSize="@dimen/_14sdp"
                android:visibility="gone" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="vertical">


                    <com.ancient.ancient_handcraft.app.widget.AppCustomEditText
                        android:id="@+id/emailid_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edittext_custom_bg"
                        android:hint="@string/only_email_id_text"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_6sdp" />


                    <com.ancient.ancient_handcraft.app.widget.AppCustomTextView
                        android:id="@+id/submit_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/checkbox_ll"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="@drawable/button_bg"
                        android:gravity="center"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/submit_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        app:customFont="fonts/Lato-Bold.ttf" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>