<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
            android:id="@+id/include_toolbar"
            layout="@layout/toolbar_layout" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/include_toolbar"
            android:fillViewport="true">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp">

            <com.ancient.ancient_handcraft.app.widget.AppCustomTextView
                    android:id="@+id/header_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/_30sdp"
                    android:text="@string/login_text"
                    android:textColor="@color/wallet_btn_color"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="gone" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/header_tv"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                <com.ancient.ancient_handcraft.app.widget.AppCustomEditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_custom_bg"
                        android:hint="@string/email_id_hint"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_6sdp" />

                <com.ancient.ancient_handcraft.app.widget.AppCustomEditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/login_email"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edittext_custom_bg"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:padding="@dimen/_6sdp" />

                <LinearLayout
                        android:id="@+id/checkbox_ll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/login_password"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal">


                    <com.ancient.ancient_handcraft.app.widget.AppCustomTextView
                            android:id="@+id/forgot_password_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forgot_password_text"
                            android:textColor="@color/contact_username_color"
                            android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <com.ancient.ancient_handcraft.app.widget.AppCustomTextView
                        android:id="@+id/login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/checkbox_ll"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="@drawable/button_bg"
                        android:gravity="center"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/log_in"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        app:customFont="fonts/Lato-Bold.ttf"/>


                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_10sdp">

                    <RelativeLayout
                            android:id="@+id/login_facebook_RL"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/social_button_bg"
                            android:gravity="center"
                            android:paddingTop="@dimen/_3sdp"
                            android:paddingBottom="@dimen/_3sdp">

                        <ImageView
                                android:id="@+id/facebook_icon_IV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="@dimen/_7sdp"
                                android:padding="@dimen/_5sdp"
                                android:src="@drawable/ic_login_facebook_icon" />

                        <View
                                android:id="@+id/view"
                                android:layout_width="@dimen/_1sdp"
                                android:layout_height="@dimen/_25sdp"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="@dimen/_7sdp"
                                android:layout_toRightOf="@id/facebook_icon_IV"
                                android:background="@color/vertical_line" />

                        <com.ancient.ancient_handcraft.app.widget.AppCustomTextView
                                android:id="@+id/facebook_TV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@id/view"
                                android:gravity="center"
                                android:text="@string/login_with_facebook_text"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12sdp"
                            app:customFont="fonts/Lato-Bold.ttf"/>

                        <!--<com.facebook.login.widget.LoginButton
                                android:id="@+id/login_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginBottom="30dp"
                                android:layout_marginTop="30dp"
                                android:visibility="gone" />-->

                    </RelativeLayout>


                    <ProgressBar
                            android:id="@+id/fbprogressbar"
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center_vertical|right"
                            android:layout_marginRight="@dimen/_20sdp"
                            android:background="@android:color/transparent"
                            android:indeterminate="true"
                            android:indeterminateTint="@color/white"
                            android:indeterminateTintMode="src_atop"
                            android:visibility="gone" />
                </FrameLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_10sdp"
                        android:orientation="horizontal">

                    <com.ancient.ancient_handcraft.app.widget.AppCustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/not_member_yet_text"
                            android:textColor="@color/dark_gray"
                            android:textSize="@dimen/_12sdp" />

                    <com.ancient.ancient_handcraft.app.widget.AppCustomTextView
                            android:id="@+id/signup_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingLeft="@dimen/_2sdp"
                            android:text="@string/signup_text"
                            android:textColor="@color/contact_username_color"
                            android:textSize="@dimen/_12sdp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <include
                layout="@layout/loader_layout"
                android:visibility="gone" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>